<resources>
    <string name="app_name">Slice</string>
    <string name="error_load_game">Не удалось загрузить игру</string>
    <string name="task">Задание</string>
    <string name="game_task">Разделите героев сериала</string>
    <string name="game_of_thrones">Игра престолов</string>
    <string name="the_lord_of_rings">Властелин колец</string>
    <string name="left_answer_text">Игра\nпрестолов</string>
    <string name="right_answer_text">Властелин\nколец</string>
    <string name="your_result">Ваш результат</string>
    <string name="error_load_game_results">Не удалось загрузить результаты игры</string>
    <string name="try_on_more">Попробовать еще раз</string>
    <string name="right">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="unknown_serial">Неизвестный сериал</string>
</resources>
